--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,15 @@ project.version.with { major = 0; minor= 1; patch = 0; releaseBuild = true}
 
 sourceCompatibility = 1.7
 
+repositories {
+	mavenCentral()
+}
+
 dependencies {
-    compile fileTree( dir: 'lib/runtime', include: '*.jar' )
-    testCompile fileTree( dir: 'lib/test', include: '*.jar' )
+    compile group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.1'
+    compile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
 }
 
 jar {
